logs/smarterling.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.10.egg-info'...
Listing './lib/python3.5/site-packages/SmartlingApiSdk-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Compiling './lib/python3.5/site-packages/example/SmartlingApiExample.py'...
***   File "./lib/python3.5/site-packages/example/SmartlingApiExample.py", line 60
    print "--" + caption + "-" * 40
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson24'...
Listing './lib/python3.5/site-packages/smarterling'...
Listing './lib/python3.5/site-packages/smarterling-0.6.egg-info'...
Listing './lib/python3.5/site-packages/smartlingApiSdk'...
Compiling './lib/python3.5/site-packages/smartlingApiSdk/ApiResponse.py'...
***   File "./lib/python3.5/site-packages/smartlingApiSdk/ApiResponse.py", line 34
    return `self.dict`
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smartlingApiSdk/FileApiBase.py'...
***   File "./lib/python3.5/site-packages/smartlingApiSdk/FileApiBase.py", line 56
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smartlingApiSdk/MultipartPostHandler.py'...
***   File "./lib/python3.5/site-packages/smartlingApiSdk/MultipartPostHandler.py", line 53
    raise TypeError("not a valid non-string sequence or mapping object"), traceback
                                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/testFAPI.py'...
***   File "./lib/python3.5/site-packages/test/testFAPI.py", line 63
    timestamp = `time.time()`
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/test_Import.py'...
***   File "./lib/python3.5/site-packages/test/test_Import.py", line 64
    timestamp = `time.time()`
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
